Unscrolled area background fix. Collapsing header fix

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -44,15 +44,15 @@
 }
 
 .home-header-left {
-    /* display: inline-block;
-    white-space: nowrap; */
+    display: inline-block;
+    white-space: nowrap;
     text-align: center;
     /* margin-left: 10px; */
     align-items: center;
     gap: 10px;
     /* flex: 0.5; */
     height: 100%;
-    /* width: fit-content; */
+    width: max-content;
 }
 
 .f-logo {
@@ -174,6 +174,7 @@
     /* flex-direction: row; */
     cursor: pointer;
     height: 40px;
+    width: max-content;
     border-radius: 25px;
     font-size: small;
     padding: 5px;
@@ -334,6 +335,8 @@
 .home-body-left {
     position: relative;
     z-index: 100;
+    height: 100vh;
+    margin-right: 1rem;
 }
 
 .inside {
@@ -616,7 +619,9 @@
 .home-body-right {
     position: relative;
     width: 250px;
+    height: 100vh;
     margin-left: 1rem;
+    background-color: #e6e7e9;
     /* background-color: lightgreen; */
 }
 
